frustated try